# CSC340-DataStructures-Projects

./: README.md
JuanSeguraRico-Assignment-02/Assignment2_PART_B/: DictionaryProgram.java
JuanSeguraRico-Assignment-03/PART_A/: CMakeLists.txt  ccvalidation.cpp  ccvalidation.h
JuanSeguraRico-Assignment-03/PART_B/: CMakeLists.txt  tictactoe.cpp  tictactoe.h
JuanSeguraRico-Assignment-03/PART_C/: CMakeLists.txt  dictionary340.cpp  dictionary340.h
JuanSeguraRico-Assignment-04/Part_A/: CMakeLists.txt  Include.h  LinkedBag340.cpp  string.cpp
JuanSeguraRico-Assignment-04/Part_B/: CMakeLists.txt  PartBQuestion.cpp  PartBQuestion.h
